--- a/kundvagn.html
+++ b/kundvagn.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <nav>
+        <div>Page 1</div>
+        <div>Page 2</div>
+        <div>Product Counter</div>
+    </nav>
+
+    <div>Visa produkter + mängd av dem</div>
+    <div>Visa pris</div>
+
+    <button>Buy</button>
+    <button>Empty Cart</button>
+
 </body>
+
 </html>
