--- a/kundvagn.html
+++ b/kundvagn.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="kundvagn.html"></script>
+    <title>Cart</title>
 </head>
 
 <body>
-    <nav>
-        <div>Page 1</div>
-        <div>Page 2</div>
-        <div>Product Counter</div>
-    </nav>
+
+    <nav class="topnav">
+        <a class="active" href="./produktSida.html"><img src="printer.svg" alt="Logo" width="23px"></a>
+        <a href="./produktSida.html">Product Page</a>
+        <a href="./kundvagn.html">Cart</a>
+        <a href="">Counter?</a>
+    </nav> 
+
 
     <div>Visa produkter + mängd av dem</div>
     <div>Visa pris</div>
