--- a/produktSida.html
+++ b/produktSida.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="produktsida.js"></script>
+    <title>Product Page</title>
 </head>
 
 <body>
 
-<nav>
-<div>Page 1</div>
-<div>Page 2</div>
-<div>Product Counter</div>
-</nav>
+    <nav class="topnav">
+        <a class="active" href="./produktSida.html"><img src="printer.svg" alt="Logo" width="23px"></a>
+        <a href="./produktSida.html">Product Page</a>
+        <a href="./kundvagn.html">Cart</a>
+        <a href="">Counter?</a>
+    </nav> 
 
     <div id="product-container">
         <div id="produkt1"></div>
