new and improved footer + css styling

--- a/produktSida.html
+++ b/produktSida.html
@@ -13,13 +13,13 @@
 <body>
 
     <nav class="topnav">
-        <a class="active" href="./produktSida.html"><img src="printer.svg" alt="Logo" width="23px"></a>
+        <a class="active" href="./produktSida.html"><img src="./pics/printer.svg" alt="Logo" width="23px"></a>
         <a href="./produktSida.html">Product Page</a>
         <a href="./kundvagn.html">Cart</a>
         <a href="">Counter?</a>
-    </nav> 
+    </nav>
 
-    <div id="product-container">
+    <div class="product-container">
         <div id="produkt1"></div>
         <div id="produkt2"></div>
         <div id="produkt3"></div>
@@ -29,6 +29,29 @@
 
     <button>Done Shopping</button>
 
+    <footer>
+        <div class="social-icon">
+            <a href="https://www.apple.com/se/">
+                <img src="./pics/apple.svg" alt="Apple.logo">
+            </a>
+            <a href="https://www.linkedin.com/">
+                <img src="./pics/linkedin.svg" alt="Linkedin.logo">
+            </a>
+            <a href="https://www.pinterest.se/">
+                <img src="./pics/pinterest.svg" alt="Pinterest.logo">
+            </a>
+            <a href="https://www.skype.com/sv/">
+                <img src="./pics/skype.svg" alt="Skype.logo">
+            </a>
+            <a
+                href="https://open.spotify.com/">
+                <img src="./pics/spotify.svg" alt="Spotify.logo">
+            </a>
+            <div class="copyright">
+                <p>© 2023 Fake Shopping. All rights reserved</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
