--- a/kundvagn.html
+++ b/kundvagn.html
@@ -19,12 +19,37 @@
         <a href="">Counter?</a>
     </nav> 
 
-
-    <div>Visa produkter + mängd av dem</div>
-    <div>Visa pris</div>
+    <div class="chosen-produkts">
+        <div>Visa produkter + mängd av dem</div>
+        <div>Visa pris</div>
+    </div>
 
     <button>Buy</button>
     <button>Empty Cart</button>
+
+    <footer>
+        <div class="social-icon">
+            <a href="https://www.apple.com/se/">
+                <img src="./pics/apple.svg" alt="Apple.logo">
+            </a>
+            <a href="https://www.linkedin.com/">
+                <img src="./pics/linkedin.svg" alt="Linkedin.logo">
+            </a>
+            <a href="https://www.pinterest.se/">
+                <img src="./pics/pinterest.svg" alt="Pinterest.logo">
+            </a>
+            <a href="https://www.skype.com/sv/">
+                <img src="./pics/skype.svg" alt="Skype.logo">
+            </a>
+            <a
+                href="https://open.spotify.com/">
+                <img src="./pics/spotify.svg" alt="Spotify.logo">
+            </a>
+            <div class="copyright">
+                <p>© 2023 Fake Shopping. All rights reserved</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
