small css and html fix

--- a/kundvagn.html
+++ b/kundvagn.html
@@ -13,15 +13,15 @@
 <body>
 
     <nav class="topnav">
-        <a class="active" href="./produktSida.html"><img src="printer.svg" alt="Logo" width="23px"></a>
+        <a class="active" href="./produktSida.html"><img src="./pics/printer.svg" alt="Logo" width="23px"></a>
         <a href="./produktSida.html">Product Page</a>
         <a href="./kundvagn.html">Cart</a>
         <a href="">Counter?</a>
     </nav> 
 
     <div class="chosen-produkts">
-        <div>Visa produkter + mängd av dem</div>
-        <div>Visa pris</div>
+        <div class="products"></div>
+        <div class="product-amount"></div>
     </div>
 
     <button>Buy</button>
