Fyllde i fetchData() till att hämta datan från firebase och visa på sidan när modulerna funkar

--- a/produktSida.html
+++ b/produktSida.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- <script type="module" src="main.js"></script> -->
     <script type="module" src="produktsida.js"></script>
     <title>Product Page</title>
 </head>
@@ -20,11 +21,11 @@
     </nav>
 
     <div class="product-container">
-        <div id="produkt1"></div>
+        <!-- <div id="produkt1"></div>
         <div id="produkt2"></div>
         <div id="produkt3"></div>
         <div id="produkt4"></div>
-        <div id="produkt5"></div>
+        <div id="produkt5"></div> -->
     </div>
 
     <button>Done Shopping</button>
