Skapat fungerande kakor som sparar produkters värden (namn, mängd, tot-pris) samt skapat kort för varje produkt som sen ska fyllas genom firebase

--- a/kundvagn.html
+++ b/kundvagn.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="kundvagn.html"></script>
+    <script type="module" src="main.js"></script>
     <title>Cart</title>
 </head>
 
@@ -19,13 +19,30 @@
         <a href="">Counter?</a>
     </nav> 
 
-    <div class="chosen-produkts">
+
+    <h1>Shopping Cart</h1>
+
+    <div class="cart-items-container"></div>
+
+    <div class="cart-total">
+      Total: <span class="total-amount"></span>
+    </div>
+
+    <button class="buy-button">Buy</button>
+    <button class="empty-button">Empty Cart</button>
+
+
+
+
+
+
+    <!-- <div class="chosen-produkts">
         <div class="products"></div>
         <div class="product-amount"></div>
     </div>
 
     <button>Buy</button>
-    <button>Empty Cart</button>
+    <button>Empty Cart</button> -->
 
     <footer>
         <div class="social-icon">
