fixat styling. footer sitter faktiskt i botten nu, placeholder image för frukterna

--- a/kundvagn.html
+++ b/kundvagn.html
@@ -44,7 +44,7 @@
     <button>Buy</button>
     <button>Empty Cart</button> -->
 
-    <footer>
+    <footer class="back">
         <div class="social-icon">
             <a href="https://www.apple.com/se/">
                 <img src="./pics/apple.svg" alt="Apple.logo">
