--- a/produktSida.html
+++ b/produktSida.html
@@ -17,7 +17,7 @@
     <nav class="topnav">
         <a class="active" href="./produktSida.html"><img src="./pics/printer.svg" alt="Logo" width="23px"></a>
         <a href="./produktSida.html">Product Page</a>
-        <a href="./kundvagn.html">Cart</a>
+        <a href="./kundvagn.html" id="cart-link">Cart</a>
         <a href="">Counter?</a>
     </nav>
 
