Fixat så cartCounter uppdateras i real-time.  All produkt information skapas med classer, input fields töms efter add-to-cart tycks och placeholder lämnas kvar med input-värdet. Done Shopping tar en nu till cart sidan, Lagt in kommentarer

--- a/produktSida.html
+++ b/produktSida.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="main.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
     <script type="module" src="produktsida.js"></script>
     <!-- <script type="module" src="./modules/Cart.js"></script> -->
     <title>Product Page</title>
@@ -18,7 +18,6 @@
         <a class="active" href="./produktSida.html"><img src="./pics/printer.svg" alt="Logo" width="23px"></a>
         <a href="./produktSida.html">Product Page</a>
         <a href="./kundvagn.html" id="cart-link">Cart</a>
-        <a href="">Counter?</a>
     </nav>
 
     <form action="">
