--- a/kundvagn.html
+++ b/kundvagn.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="main.js"></script>
-    <script type="module" src="kundvagn.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
+    <script type="module" src="produktsida.js"></script>
+    <!-- <script type="module" src="kundvagn.js"></script> -->
 
     <title>Cart</title>
 </head>
@@ -18,7 +19,6 @@
         <a class="active" href="./produktSida.html"><img src="./pics/printer.svg" alt="Logo" width="23px"></a>
         <a href="./produktSida.html">Product Page</a>
         <a href="./kundvagn.html">Cart</a>
-        <a href="">Counter?</a>
     </nav> 
 
 
@@ -32,9 +32,6 @@
 
     <button class="buy-button">Buy</button>
     <button class="empty-button">Empty Cart</button>
-
-
-
 
 
 
