Skapat en basic cart sida med alla funktioner förutom Firebase relaterade. Även animerat element

--- a/kundvagn.html
+++ b/kundvagn.html
@@ -30,6 +30,8 @@
       Total: <span class="total-amount"></span>
     </div>
 
+    <div class="bye-message"></div>
+
     <button class="buy-button">Buy</button>
     <button class="empty-button">Empty Cart</button>
 
