bigfixes, styling och implementerad bild på cart.js

--- a/produktSida.html
+++ b/produktSida.html
@@ -16,7 +16,7 @@
 
     <nav class="topnav">
         <a class="active" href="./produktSida.html"><img src="./pics/printer.svg" alt="Logo" width="23px"></a>
-        <a href="./produktSida.html">Product Page</a>
+        <a class="present" href="./produktSida.html">Product Page</a>
         <a href="./kundvagn.html" id="cart-link">Cart</a>
     </nav>
 
