--- a/kundvagn.html
+++ b/kundvagn.html
@@ -18,7 +18,7 @@
     <nav class="topnav">
         <a class="active" href="./produktSida.html"><img src="./pics/printer.svg" alt="Logo" width="23px"></a>
         <a href="./produktSida.html">Product Page</a>
-        <a href="./kundvagn.html" id="cart-link">Cart</a>
+        <a class="present" href="./kundvagn.html" id="cart-link">Cart</a>
     </nav> 
 
 
