--- a/produktSida.html
+++ b/produktSida.html
@@ -21,57 +21,9 @@
     </nav>
 
     <form action="">
-
-    <div class="product-container">
-        <!-- <div id="p1">
-            <h3 id="p1Name">p1</h3>
-            <p id="p1Price">Price: $10</p>
-            <img id="p1Img" src="./pics/printer.svg" alt="Apple-img">
-            <label for="product1-quantity">Quantity:</label>
-            <input type="number" id="p1-quantity" name="product1-quantity" value="0" min="0">
-            <button id="p1-add-to-cart" data-product="Apple">Add to cart</button>
-          </div>
-
-          <div id="p2">
-            <h3 id="p2Name">p2</h3>
-            <p id="p2Price">Price: $10</p>
-            <img id="p2Img" src="./pics/printer.svg" alt="Banana-img">
-            <label for="product2-quantity">Quantity:</label>
-            <input type="number" id="p2-quantity" name="product2-quantity" value="0" min="0">
-            <button id="p2-add-to-cart" data-product="Banana">Add to cart</button>
-          </div>
-
-          <div id="p3">
-            <h3 id="p3Name">p3</h3>
-            <p id="p3Price">Price: $10</p>
-            <img id="p3Img" src="./pics/printer.svg" alt="Orange-img">
-            <label for="product3-quantity">Quantity:</label>
-            <input type="number" id="p3-quantity" name="product3-quantity" value="0" min="0">
-            <button id="p3-add-to-cart" data-product="Orange">Add to cart</button>
-          </div>
-
-          <div id="p4">
-            <h3 id="p4Name">p4</h3>
-            <p id="p4Price">Price: $10</p>
-            <img id="p4Img" src="./pics/printer.svg" alt="Pineapple-img">
-            <label for="product4-quantity">Quantity:</label>
-            <input type="number" id="p4-quantity" name="product4-quantity" value="0" min="0">
-            <button id="p4-add-to-cart" data-product="Pineapple">Add to cart</button>
-          </div>
-
-          <div id="p5">
-            <h3 id="p5Name">p5</h3>
-            <p id="p5Price">Price: $10</p>
-            <img id="p5Img" src="./pics/printer.svg" alt="Watermelon-img">
-            <label for="product5-quantity">Quantity:</label>
-            <input type="number" id="p5-quantity" name="product5-quantity" value="0" min="0">
-            <button id="p5-add-to-cart" data-product="Watermelon">Add to cart</button>
-          </div> -->
-    </div>
-
+        <div class="product-container"></div>
         <button class="done-shopping-button">Done Shopping</button>
     </form>
-
 
     <footer class="front">
         <div class="social-icon">
@@ -87,8 +39,7 @@
             <a href="https://www.skype.com/sv/">
                 <img src="./pics/skype.svg" alt="Skype.logo">
             </a>
-            <a
-                href="https://open.spotify.com/">
+            <a href="https://open.spotify.com/">
                 <img src="./pics/spotify.svg" alt="Spotify.logo">
             </a>
             <div class="copyright">
